<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/recipeSteps"
        android:layout_width="wrap_content"
        android:layout_height="558dp"
        android:layout_above="@+id/btnAddStep"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-4dp">

    </ListView>

    <EditText
        android:id="@+id/etNewStep"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeSteps"
        android:layout_alignTop="@+id/btnAddStep"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_toStartOf="@+id/btnAddStep"
        android:layout_toLeftOf="@+id/btnAddStep"
        android:hint="Enter a recipe step" />

    <Button
        android:id="@+id/btnAddStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="0dp"
        android:onClick="onAddItem"
        android:text="Add Step" />

    <ImageView
        android:id="@+id/mic"
        android:layout_width="54dp"
        android:layout_height="56dp"
        android:layout_above="@+id/btnAddStep"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-54dp"
        app:srcCompat="@drawable/ic_mic_black_off" />

</RelativeLayout>